--- a/src/app/ui/books/edit-book/edit-book.component.html
+++ b/src/app/ui/books/edit-book/edit-book.component.html
@@ -1,1 +1,7 @@
 <p>edit-book works!</p>
+<p>edit-book works!</p>
+<p>edit-book works!</p>
+<p>edit-book works!</p>
+<p>edit-book works!</p>
+<p>{{userName}}</p>
+<p>{{userAge}}</p>
