--- a/src/app/ui/menu/footer/footer.component.html
+++ b/src/app/ui/menu/footer/footer.component.html
@@ -25,9 +25,9 @@
           <h6 class="text-uppercase fw-bold mb-4">
             <i class="fas fa-gem me-3"></i>Library
           </h6>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda ea enim excepturi expedita magni maiores, maxime nam omnis placeat, quidem, quis sequi tempore totam velit.
-          </p>
+<!--          <p>-->
+<!--            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda ea enim excepturi expedita magni maiores, maxime nam omnis placeat, quidem, quis sequi tempore totam velit.-->
+<!--          </p>-->
         </div>
         <!-- Grid column -->
 
@@ -55,10 +55,10 @@
             Полезные ссылки
           </h6>
           <p>
-            <a href="#!" class="text-reset">Книги</a>
+            <a routerLink="/books-list" href="#" class="text-reset">Книги</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Авторы</a>
+            <a routerLink="/authors" href="#" class="text-reset">Авторы</a>
           </p>
         </div>
         <!-- Grid column -->
